--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <body>
         <h1>Lew Foods</h1>
-            <a href="./recipes/ep_parmesan.html">Eggplant Parmesan</a>
+            <ul>
+                <li><a href="./recipes/ep-parmesan.html">Eggplant Parmesan</a></li>
+                <li><a href="./recipes/beef-chili.html">Beef Chili</a></li>
+                <li><a href="./recipes/salisbury-steak.html">Salisbury Steak</a></li>
+            </ul>
     </body>
 </html>
