--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Lew Foods</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         <h1>Lew Foods</h1>
-            <ul>
-                <li><a href="./recipes/ep-parmesan.html">Eggplant Parmesan</a></li>
-                <li><a href="./recipes/beef-chili.html">Beef Chili</a></li>
-                <li><a href="./recipes/salisbury-steak.html">Salisbury Steak</a></li>
-            </ul>
+                <button class="button"><a href="./recipes/ep-parmesan.html">Eggplant Parmesan</a></button>
+                <button class="button"><a href="./recipes/beef-chili.html">Beef Chili</a></button>
+                <button class="button"><a href="./recipes/salisbury-steak.html">Salisbury Steak</a></button>
     </body>
 </html>
