--- a/recipes/beef-chili.html
+++ b/recipes/beef-chili.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Lew Foods</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Beef Chili</h1>
-            <img src="../images/chili.webp">
-        <h2>Description</h2>
-            <p>This beef chili recipe with tomato juice and beans can be made on the stove or in the slow cooker. It's quick, easy, and so good.</p>
-        <h2>Ingredients</h2>
-            <ul>
+        <div>Beef Chili</div>
+            <img class="food" src="../images/chili.webp">
+        <h2 class="even">Description</h2>
+            <p class="odd">This beef chili recipe with tomato juice and beans can be made on the stove or in the slow cooker. It's quick, easy, and so good.</p>
+        <h2 class="even">Ingredients</h2>
+            <ul class="odd">
                 <li>2 pounds lean ground beef</li>
                 <li>1 (46 fluid ounce) can tomato juice</li>
                 <li>1 (29 ounce) can tomato sauce</li>
@@ -27,8 +28,8 @@
                 <li>½ teaspoon ground black pepper</li>
                 <li>⅛ teaspoon ground cayenne pepper</li>
             </ul>
-        <h2>Steps</h2>
-            <ol>
+        <h2 class="even">Steps</h2>
+            <ol class="odd">
                 <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 5 to 7 minutes. Drain and discard grease.</li>
                 <li>Transfer browned beef into a large pot over medium heat; stir in tomato juice, tomato sauce, kidney beans, pinto beans, onions, bell pepper, chili powder, cumin, salt, sugar, oregano, ground black pepper, and cayenne pepper. Bring to a boil; reduce heat to low and simmer for 1 1/2 hours.</li>
             </ol>
