--- a/recipes/ep-parmesan.html
+++ b/recipes/ep-parmesan.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>Lew Foods</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Eggplant Parmesan</h1>
-            <img src="../images/eggplant.webp">
-        <h2>Description</h2>
-            <p>Crisp, saucy, and flavorful eggplant Parmesan is just one easy recipe away. You'll find the full recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe;</p>
-            <p>Begin by preheating your oven to 350 degrees F. Dip sliced eggplant into the beaten egg mixture and seasoned breadcrumbs, then bake for five minutes on each side. Spread spaghetti sauce at the bottom of a 9x13 pan, layering the sauce with cheeses, eggplant slices, and fresh basil.</p>
-        <h2>Ingredients</h2>
-            <ul>
+        <div>Eggplant Parmesan</div>
+            <img class="food" src="../images/eggplant.webp">
+        <h2 class=" even">Description</h2>
+            <p class="odd">Crisp, saucy, and flavorful eggplant Parmesan is just one easy recipe away. You'll find the full recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe;</p>
+            <p class="odd">Begin by preheating your oven to 350 degrees F. Dip sliced eggplant into the beaten egg mixture and seasoned breadcrumbs, then bake for five minutes on each side. Spread spaghetti sauce at the bottom of a 9x13 pan, layering the sauce with cheeses, eggplant slices, and fresh basil.</p>
+        <h2 class="even">Ingredients</h2>
+            <ul class="odd">
                 <li>3 large eggplant, peeled and thinly sliced</li>
                 <li>2 large eggs, beaten</li>
                 <li>4 cups Italian seasoned bread crumbs</li>
@@ -21,8 +22,8 @@
                 <li>½ cup grated Parmesan cheese, divided</li>
                 <li>½ teaspoon dried basil</li>
             </ul>
-        <h2>Steps</h2>
-            <ol>
+        <h2 class="even">Steps</h2>
+            <ol class="odd">
                 <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
                 <li>Dip eggplant slices in beaten egg, then in bread crumbs to coat. Place in a single layer on a baking sheet.</li>
                 <li>Bake in the preheated oven for 5 minutes. Flip and bake for 5 more minutes.</li>
