--- a/recipes/salisbury-steak.html
+++ b/recipes/salisbury-steak.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Lew Foods</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Salisbury Steak</h1>
-            <img src="../images/salisbury.webp">
-        <h2>Description</h2>
-            <p>This Salisbury steak recipe comes together quickly and does not need a lot of time in the slow cooker. It's a delicious way to add flavor to ground beef and the children love it! The gravy is delightful served over mashed potatoes.</p>
-        <h2>Ingredients</h2>
-            <ul>
+        <div>Salisbury Steak</div>
+            <img id="steak" src="../images/salisbury.webp">
+        <h2 class="even">Description</h2>
+            <p class="odd">This Salisbury steak recipe comes together quickly and does not need a lot of time in the slow cooker. It's a delicious way to add flavor to ground beef and the children love it! The gravy is delightful served over mashed potatoes.</p>
+        <h2 class="even">Ingredients</h2>
+            <ul class="odd">
                 <li>2 pounds lean ground beef</li>
                 <li>½ cup Italian seasoned bread crumbs</li>
                 <li>¼ cup milk</li>
@@ -22,8 +23,8 @@
                 <li>¾ cup water</li>
                 <li>1 (1 ounce) packet dry au jus mix</li>
             </ul>
-        <h2>Steps</h2>
-            <ol>
+        <h2 class="even">Steps</h2>
+            <ol class="odd">
                 <li>Combine ground beef, bread crumbs, milk, and onion soup mix together in a large bowl until well combined; shape into 8 patties.</li>
                 <li>Heat oil in a large skillet over medium-high heat. Dredge patties in flour just to coat, and quickly brown on both sides in the hot skillet. Place browned patties into the slow cooker stacking alternately like a pyramid.</li>
                 <li>Mix condensed soup, water, and au jus mix together in a medium bowl; pour over the beef patties. Cook on Low until ground beef is well done, about 4 to 5 hours.</li>
