--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
                 <button class="button"><a href="./recipes/ep-parmesan.html">Eggplant Parmesan</a></button>
                 <button class="button"><a href="./recipes/beef-chili.html">Beef Chili</a></button>
                 <button class="button"><a href="./recipes/salisbury-steak.html">Salisbury Steak</a></button>
+        <br>
+        <br>
+        <h1 class="even">Welcome</h1>
     </body>
 </html>
