--- a/recipes/beef-chili.html
+++ b/recipes/beef-chili.html
@@ -7,6 +7,10 @@
     </head>
 
     <body>
+        <button class="button"><a href="../index.html">Home</a></button>
+        <button class="button"><a href="./ep-parmesan.html">Eggplant Parmesan</a></button>
+        <button class="button"><a href="./salisbury-steak.html">Salisbury Steak</a></button>
+        
         <div>Beef Chili</div>
             <img class="food" src="../images/chili.webp">
         <h2 class="even">Description</h2>
