--- a/recipes/salisbury-steak.html
+++ b/recipes/salisbury-steak.html
@@ -7,6 +7,10 @@
     </head>
 
     <body>
+        <button class="button"><a href="../index.html">Home</a></button>
+        <button class="button"><a href="./ep-parmesan.html">Eggplant Parmesan</a></button>
+        <button class="button"><a href="./beef-chili.html">Beef Chili</a></button>
+        
         <div>Salisbury Steak</div>
             <img id="steak" src="../images/salisbury.webp">
         <h2 class="even">Description</h2>
