--- a/recipes/ep-parmesan.html
+++ b/recipes/ep-parmesan.html
@@ -2,33 +2,59 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Lew Foods</title>
+        <title>Lew Foods: Eggplant Parmesan</title>
         <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
+        <button class="button"><a href="../index.html">Home</a></button>
+        <button class="button"><a href="./beef-chili.html">Beef Chili</a></button>
+        <button class="button"><a href="./salisbury-steak.html">Salisbury Steak</a></button>
+
         <div>Eggplant Parmesan</div>
             <img class="food" src="../images/eggplant.webp">
-        <h2 class=" even">Description</h2>
-            <p class="odd">Crisp, saucy, and flavorful eggplant Parmesan is just one easy recipe away. You'll find the full recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe;</p>
-            <p class="odd">Begin by preheating your oven to 350 degrees F. Dip sliced eggplant into the beaten egg mixture and seasoned breadcrumbs, then bake for five minutes on each side. Spread spaghetti sauce at the bottom of a 9x13 pan, layering the sauce with cheeses, eggplant slices, and fresh basil.</p>
-        <h2 class="even">Ingredients</h2>
-            <ul class="odd">
-                <li>3 large eggplant, peeled and thinly sliced</li>
-                <li>2 large eggs, beaten</li>
-                <li>4 cups Italian seasoned bread crumbs</li>
-                <li>6 cups spaghetti sauce, divided</li>
-                <li>1 (16 ounce) package mozzarella cheese, shredded and divided</li>
-                <li>½ cup grated Parmesan cheese, divided</li>
-                <li>½ teaspoon dried basil</li>
+        <h2 class="even">Description</h2>
+            <p class="odd">Crisp, saucy, and flavorful eggplant Parmesan is just one easy recipe away. You'll find the full recipe below with step-by-step instructions, but here's what you can expect when you make this top-rated recipe;
+                            <br>
+                            <br>
+                            Begin by preheating your oven to 350 degrees F. Dip sliced eggplant into the beaten egg mixture and seasoned breadcrumbs, then bake for five minutes on each side. Spread spaghetti sauce at the bottom of a 9x13 pan, layering the sauce with cheeses, eggplant slices, and fresh basil.</p>
+       <table  id="ingr"> 
+            <tr>
+                <th>Ingredients</th>
+            </tr>
+            <ul>
+            <tr>
+                <td><li>3 large eggplant, peeled and thinly sliced</li></td>
+            </tr>
+            <tr>
+                <td><li>2 large eggs, beaten</li></td>
+            </tr>
+            <tr>
+                <td><li>4 cups Italian seasoned bread crumbs</li></td>
+            </tr>
+            <tr>
+                <td><li>6 cups spaghetti sauce, divided</li></td>
+            </tr>
+            <tr>
+                <td><li>1 (16 ounce) package mozzarella cheese, shredded and divided</li></td>
+            </tr>
+            <tr>
+                <td><li>½ cup grated Parmesan cheese, divided</li></td>
+            </tr>
+            <tr>
+                <td><li>½ teaspoon dried basil</li></td>
+            </tr>
             </ul>
+        
         <h2 class="even">Steps</h2>
             <ol class="odd">
                 <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
                 <li>Dip eggplant slices in beaten egg, then in bread crumbs to coat. Place in a single layer on a baking sheet.</li>
                 <li>Bake in the preheated oven for 5 minutes. Flip and bake for 5 more minutes.</li>
-                <li>Spread spaghetti sauce to cover the bottom of a 9x13-inch baking dish. Place a layer of eggplant slices in the sauce. Sprinkle with mozzarella and Parmesan cheeses. Repeat layers with remaining sauce, eggplant, and cheese, ending with a cheese layer. Sprinkle basil on top.</li>
+                <li>Spread spaghetti sauce to cover the bottom of a 9x13-inch baking dish. Place a layer of eggplant slices in the sauce.</li> 
+                <li>Sprinkle with mozzarella and Parmesan cheeses. Repeat layers with remaining sauce, eggplant, and cheese, ending with a cheese layer. Sprinkle basil on top.</li>
                 <li>Bake in the preheated oven until golden brown, about 35 minutes.</li>
             </ol>
+            <br> <br>
     </body>
 </html>
